--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,28 @@ h1 {
   font-size: clamp(25px, 5vw, 45px);
 }
 
+textarea {
+  resize: none;
+}
+
+/*********** REDES ***********/
+.wpp {
+  position: fixed;
+  width: 50px;
+  height: 50px;
+  bottom: 10px;
+  right: 10px;
+  z-index: 100;
+  cursor: pointer;
+}
+.wpp img {
+  width: 100%;
+}
+
+.wpp:hover {
+  transform: scale(1.2);
+  transition: all 0.3s linear;
+}
 /*********** HEADER ***********/
 
 .header_container {
@@ -291,8 +313,11 @@ h1 {
   opacity: 0;
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  padding: 50px 15px 30px;
+  text-align: center;
 }
 
 .cards_products:hover {
@@ -313,25 +338,34 @@ h1 {
 .btn_card {
   height: auto;
   width: auto;
-  background-color: transparent;
+  background-color: black;
+  color: #ffffff;
   border: none;
 
   font: inherit;
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
+  height: 30px;
+  width: 110px;
+  border-radius: 5px;
+  box-shadow: 0px 15px 28px -15px #000000;
+}
+
+.btn_card:hover {
+  transform: scale(1.1);
 }
 
 /********* SECTION RECARGAS *********/
 
 .recargas_container {
   width: 100%;
-  height: 200px;
+  height: auto;
   background: white;
   display: flex;
   justify-content: center;
   margin-top: 1px;
-  padding: 20px 0;
+  padding: 50px 0;
 }
 
 .content_recargas {
@@ -344,7 +378,7 @@ h1 {
 }
 
 .texts_recargas {
-  border: 3px solid black;
+  /* border: 3px solid black; */
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -352,6 +386,11 @@ h1 {
   align-items: center;
   width: 70%;
   background: #b8b8b8;
+  gap: 20px;
+  padding: 20px 0;
+
+  border-radius: 2px;
+  box-shadow: 0px 15px 28px -15px #000000;
 }
 
 .texts_recargas > h2 {
@@ -362,9 +401,10 @@ h1 {
 .input_flex {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  gap: 20px;
   align-items: center;
+  gap: 20px;
 }
 
 .input_flex > .consult:focus {
@@ -385,7 +425,17 @@ h1 {
   color: #fafafa;
 }
 
-.input_flex > .submit {
+.input_flex > .hs_cons {
+  height: 100px;
+}
+
+.btn_submit {
+  display: flex;
+  justify-content: end;
+  width: 50%;
+}
+
+.btn_submit .submit {
   background-color: coral;
   color: white;
   border: none;
@@ -399,10 +449,21 @@ h1 {
   box-shadow: 0px 0px 29px -3px #000000;
 }
 
-.input_flex > .submit:hover {
+.btn_submit .submit:hover {
   background-color: white;
   color: #000000;
   transition: all 0.5s linear;
+}
+
+@media (max-width: 640px) {
+  .input_flex .consult {
+    width: 80%;
+  }
+  .btn_submit {
+    display: flex;
+    justify-content: end;
+    width: 80%;
+  }
 }
 
 @media (max-width: 992px) {
@@ -415,18 +476,18 @@ h1 {
 
 .empresa {
   height: auto;
-  background-color: rgb(255, 79, 66);
+  /* background-color: rgb(255, 79, 66); */
   margin: 0 auto;
   display: flex;
   justify-content: center;
-  border: 2px solid black;
+  /* border: 2px solid black; */
   padding: 20px 20px;
 }
 
 .content_empresa {
   width: 80%;
   max-width: 1400px;
-  border: 2px solid black;
+  /* border: 2px solid black; */
 
   display: flex;
   justify-content: space-around;
@@ -442,6 +503,7 @@ h1 {
   align-items: center;
   padding: 15px 0;
   gap: 20px;
+  flex: 1 1 200px;
 }
 
 .btn_work {
@@ -455,8 +517,7 @@ h1 {
   font-size: 20px;
   font-weight: bold;
   text-transform: uppercase;
-  color: #ffffff;
-  text-shadow: 4px 3px 0px #7a7a7a;
+  color: #000000;
 }
 
 .img_empresa:hover {
@@ -477,41 +538,132 @@ h1 {
   }
 }
 
+/********** FOOTER **********/
+
 .footer_container {
   height: auto;
+  width: 100%;
   display: flex;
   justify-content: center;
   margin-top: 5px;
+  background: linear-gradient(
+    0deg,
+    rgba(255, 103, 91, 1) 0%,
+    rgba(255, 179, 173, 1) 65%,
+    rgba(255, 255, 255, 1) 100%
+  );
 }
 
 .content_footer {
   max-width: 1400px;
   width: 100%;
-}
-
-.text_footer {
-  width: 100%;
   display: flex;
-  justify-content: center;
-}
-
-.text_footer > h2 {
-  font-size: 30px;
-  background: linear-gradient(360deg, rgb(0, 0, 0), rgb(255, 0, 0));
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  flex-direction: column;
+  padding: 20px 10px 10px;
+  gap: 10px;
 }
 
 .content_footer_texts {
   display: flex;
   justify-content: space-between;
+  position: relative;
+  padding-top: 40px;
 }
 
-/*
-.       BG PARA FOOTER 
-background: linear-gradient(
-  0deg,
-  rgba(255, 103, 91, 1) 0%,
-  rgba(255, 179, 173, 1) 65%,
-  rgba(255, 255, 255, 1) 100%
-  ); */
+.info_footer {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+  gap: 8px;
+
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.info_footer a:hover {
+  color: rgb(155, 95, 95);
+  transition: all 0.5s ease;
+}
+
+.contact_footer {
+  display: flex;
+  flex-direction: column;
+  width: 33%;
+
+  align-items: flex-end;
+  padding-right: 20px;
+  gap: 8px;
+
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.contact_footer a:hover {
+  color: rgb(155, 95, 95);
+  transition: all 0.5s ease;
+  cursor: pointer;
+}
+
+.content_contact {
+  display: flex;
+  align-items: center;
+
+  gap: 10px;
+}
+
+.content_ico {
+  height: 20px;
+  width: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.content_ico > img {
+  width: 100%;
+  height: 100%;
+}
+
+.space {
+  margin-right: 38px;
+}
+
+@media (max-width: 640px) {
+  .space {
+    margin-right: 25px;
+  }
+}
+
+.content_footer_texts p {
+  font-size: clamp(10px, 2vw, 16px);
+}
+
+.copy {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.copy p {
+  font-size: clamp(7px, 2vw, 10px);
+}
+
+.container_logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 33%;
+}
+
+.logo_footer {
+  width: 200px;
+}
+.logo_footer > img {
+  width: 100%;
+}
+
+/* @media (max-width: 768px) {
+  .logo_footer {
+    display: none;
+  } */
