--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body {
 }
 
 h1 {
-  font-size: clamp(25px, 5vw, 45px);
+  font-size: clamp(27px, 5vw, 45px);
 }
 
 textarea {
@@ -226,7 +226,7 @@ textarea {
 }
 
 .content_hero_text p {
-  font-size: clamp(10px, 2vw, 18px);
+  font-size: clamp(11px, 2vw, 18px);
 }
 
 @media (max-width: 992px) {
@@ -327,12 +327,20 @@ textarea {
 
 .cards_products:hover > .card_front {
   transition: all 0.7s;
-  filter: blur(4px);
+  filter: blur(7px);
 }
 
 .cards_products:hover > .card_back {
   opacity: 1;
   transition: all 0.7s;
+}
+
+.card_back h2 {
+  text-transform: uppercase;
+}
+
+.card_back p {
+  text-align: left;
 }
 
 .btn_card {
@@ -353,6 +361,7 @@ textarea {
 }
 
 .btn_card:hover {
+  transition: all 0.7s ease;
   transform: scale(1.1);
 }
 
