--- a/html/styleRegister.css
+++ b/html/styleRegister.css
@@ -111,38 +111,6 @@ textarea {
   font-weight: 400;
 }
 
-@media (max-width: 992px) {
-  .header_container .list {
-    display: flex;
-    gap: 60px;
-    align-items: center;
-    background-color: #fafafa;
-    padding: 10px 20px;
-    padding-top: 50px;
-    flex-direction: column;
-    height: 100vh;
-    width: 70vw;
-    position: fixed;
-    right: -100%;
-    top: 90px;
-    box-shadow: -10px 20px 10px rgb(0 0 0 / 25%);
-    transition: all 0.7s ease-in-out;
-    visibility: visible;
-  }
-  .icon_container {
-    display: flex;
-  }
-  .icon_container i:hover {
-    color: rgb(92, 0, 0);
-    transition: all 0.5s;
-  }
-
-  .navbar #toggle_menu:checked ~ .list {
-    display: flex;
-    right: 0;
-  }
-}
-
 .hov {
   color: rgb(92, 0, 0);
   position: relative;
@@ -184,6 +152,169 @@ textarea {
   border-left-color: transparent;
   border-bottom-color: red;
   border-right-color: red;
+}
+
+/****** HERO ******/
+
+.container_back {
+  height: 105vh;
+  width: 100%;
+  /* min-width: 800px; */
+  background-image: url(img/hero-login.jpg);
+  filter: blur(5px);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.positions {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  position: relative;
+}
+
+/******* LOGIN *******/
+
+.container_login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+  height: auto;
+  position: absolute;
+}
+
+.box_login {
+  max-width: 1400px;
+  min-width: 280px;
+  width: 70vw;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0;
+
+  background-color: #b8b8b8;
+  border-radius: 5px;
+  flex-wrap: wrap;
+}
+
+.content_login {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
+  padding: 30px;
+}
+
+.box_login:hover {
+  transform: scale(1.1);
+  transition: all 0.7s;
+}
+
+.box_one {
+  background-color: coral;
+  width: 90%;
+  height: auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px 25px;
+  gap: 20px;
+
+  box-shadow: 0px 15px 28px -15px #000000;
+}
+
+.box_one p {
+  font-size: 18px;
+}
+
+.box_one input {
+  width: 100%;
+  height: 25px;
+  padding: 0 5px;
+  font-size: 16px;
+}
+
+.box_one input:focus {
+  outline: none;
+  border: none;
+  box-shadow: 10px 10px 14px -5px #000000;
+}
+
+.box_column {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.column {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.btn_login {
+  height: 25px;
+  margin-top: 10px;
+
+  background-color: #b8b8b8;
+  font-weight: 700;
+  font-size: 13px;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 10px 10px 14px -5px #000000;
+  cursor: pointer;
+}
+
+.btn_login:hover {
+  background-color: #949494;
+  transition: all 0.5s ease;
+}
+
+.box_log {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+
+.content_login > h1 {
+  display: flex;
+  color: #ffffff;
+  text-shadow: 4px 3px 0 #7a7a7a;
+}
+
+@media (max-width: 992px) {
+  .box_log p {
+    font-size: clamp(13px, 2vw, 18px);
+  }
+
+  .box_column {
+    flex-direction: column;
+    gap: 15px;
+  }
+
+  .column {
+    width: 100%;
+  }
+}
+
+@media (max-width: 576px) {
+  .content_login {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+
+  .box_one {
+    width: 95%;
+  }
 }
 
 /********** FOOTER **********/
