--- a/styles.css
+++ b/styles.css
@@ -210,7 +210,7 @@ textarea {
 }
 
 .content_hero_text {
-  width: 40%;
+  width: 50%;
   height: 400px;
   /* border: 3px solid black; */
   display: flex;
@@ -273,6 +273,14 @@ textarea {
   color: white;
   text-shadow: 0px 0px 0px 5px red;
 }
+
+.card_front > p {
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  -webkit-text-stroke: 0.5px darkgrey;
+  color: rgb(0, 0, 0);
+}
+
 .bg {
   background-size: cover;
   background-repeat: no-repeat;
@@ -641,38 +649,33 @@ textarea {
   .space {
     margin-right: 25px;
   }
-}
 
-.content_footer_texts p {
-  font-size: clamp(10px, 2vw, 16px);
-}
+  .content_footer_texts p {
+    font-size: clamp(10px, 2vw, 16px);
+  }
 
-.copy {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
+  .copy {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+  }
 
-.copy p {
-  font-size: clamp(7px, 2vw, 10px);
-}
+  .copy p {
+    font-size: clamp(7px, 2vw, 10px);
+  }
 
-.container_logo {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 33%;
-}
+  .container_logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 33%;
+  }
 
-.logo_footer {
-  width: 200px;
-}
-.logo_footer > img {
-  width: 100%;
-}
-
-/* @media (max-width: 768px) {
   .logo_footer {
-    display: none;
-  } */
+    width: 200px;
+  }
+  .logo_footer > img {
+    width: 100%;
+  }
+}
